deployments/infrastructure/headlamp/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: headlamp-ingress
  namespace: infrastructure
spec:
  ingressClassName: tailscale
  tls:
    - hosts:
        - headlamp
      secretName: headlamp-tls-cert
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: headlamp
                port:
                  number: 80
